force-app/main/default/objects/Financials__c/Financials__c.object-meta.xml
<CustomObject>
    <label>Financials</label>
    <nameField>
        <displayFormat>FIN-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>