force-app/main/default/objects/Financials__c/fields/Annual__c.field-meta.xml
<CustomField>
    <fullName>Annual__c</fullName>
    <label>Annual Recurring Revenue (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>