force-app/main/default/objects/Financials__c/fields/As_of_Date__c.field-meta.xml
<CustomField>
    <fullName>As_of_Date__c</fullName>
    <label>As of Date</label>
    <type>Date</type>
</CustomField>