force-app/main/default/objects/Financials__c/fields/Assets_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Assets_Under_Management__c</fullName>
    <label>Assets Under Management (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>