force-app/main/default/objects/Financials__c/fields/Book_Value_MM__c.field-meta.xml
<CustomField>
    <fullName>Book_Value_MM__c</fullName>
    <label>Book Value (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>