force-app/main/default/objects/Financials__c/fields/EBIT_MM__c.field-meta.xml
<CustomField>
    <fullName>EBIT_MM__c</fullName>
    <label>EBIT (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>