force-app/main/default/objects/Financials__c/fields/Interest_and_Fee_Income__c.field-meta.xml
<CustomField>
    <fullName>Interest_and_Fee_Income__c</fullName>
    <label>Interest and Fee Income (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>