force-app/main/default/objects/Financials__c/fields/Net_Asset_Value_MM__c.field-meta.xml
<CustomField>
    <fullName>Net_Asset_Value_MM__c</fullName>
    <label>Net Asset Value (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>