force-app/main/default/objects/Financials__c/fields/Number_of_Companies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Companies__c</fullName>
    <label>Number of Companies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>