force-app/main/default/objects/Financials__c/fields/Pre_Tax_Income__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_Income__c</fullName>
    <label>Pre-Tax Income (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>