force-app/main/default/objects/Financials__c/fields/Related_Approval__c.field-meta.xml
<CustomField>
    <fullName>Related_Approval__c</fullName>
    <label>Related Approval</label>
    <referenceTo>Opportunity_Approval__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>