force-app/main/default/objects/Financials__c/fields/Unique_Record__c.field-meta.xml
<CustomField>
    <fullName>Unique_Record__c</fullName>
    <label>Unique Record</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>