force-app/main/default/objects/Financials__c/listViews/All_Financials.listView-meta.xml
<ListView>
    <fullName>All_Financials</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Opportunity_ID__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_ID__c</field>
        <operation>contains</operation>
        <value>a0I3100000iBjik</value>
    </filters>
    <label>All Financials</label>
</ListView>